# advent-of-code-roulette-2024

./: README.md  languages.json  picked.json
day01_ocaml/: day01_ocaml.opam  dune  dune-project  run.sh  solution.ml
day02_javascript/: run.sh  solution.js
day03_erlang/: run.sh  solution.beam  solution.erl
day04_lisp/: run.sh  solution.lisp
day05_julia/: run.sh  solution.jl
day06_groovy/: run.sh  solution.groovy
day07_python/: solution.py
day08_rust/src/: main.rs
day09_c#/: Program.cs  day09_c#.csproj
day10_zig/: .gitignore  solution.zig
scripts/: new-day.sh  pick-language.py
