(lang dune 3.17)

(name day01_ocaml)

(generate_opam_files true)

(source
 (github raian621/advent-of-code-roulette-2024))

(authors "Ryan Bell <ryan.bell62101@gmail.com>")

(license Unlicense)

(package
 (name day01_ocaml)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("advent of code" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
 